--- a/index.html
+++ b/index.html
@@ -36,10 +36,6 @@ select, input, button {
 
 .hidden { display: none; }
 
-/* モード切替 */
-.mode-selector { text-align: center; margin-bottom: 10px; }
-.mode-selector label { margin: 0 10px; }
-
 /* 世代チェックボックス */
 .gen-container {
   display: grid;
@@ -65,6 +61,8 @@ select, input, button {
   right: 0;
   transform: scale(1.2);
 }
+
+.gen-note { font-size: 0.9em; color: #555; margin-bottom: 10px; }
 </style>
 </head>
 
@@ -72,10 +70,10 @@ select, input, button {
 <div class="container">
   <h1>ポケモン図鑑番号検定</h1>
 
-  <!-- モード切替 -->
+  <!-- モード選択 -->
   <label>モード選択</label>
   <select id="modeSelect">
-    <option value="num2poke">番号→ポケモン</option>
+    <option value="num2poke" selected>番号→ポケモン</option>
     <option value="poke2num">ポケモン→番号</option>
   </select>
 
@@ -86,14 +84,13 @@ select, input, button {
     <option value="5">5秒</option>
     <option value="10">10秒</option>
     <option value="20">20秒</option>
-    <option value="30">30秒</option>
+    <option value="30" selected>30秒</option>
     <option value="45">45秒</option>
     <option value="60">60秒</option>
   </select>
 
   <!-- 世代チェック -->
-  <label>世代選択%d
-  ※メルタン→アローラ、ヒスイ→ガラル</label>
+  <label>世代選択</label>
   <div class="gen-container">
     <label><input type="checkbox" value="all" checked> 全て</label>
     <label><input type="checkbox" value="kanto" checked> カントー</label>
@@ -106,6 +103,7 @@ select, input, button {
     <label><input type="checkbox" value="galar" checked> ガラル</label>
     <label><input type="checkbox" value="paldea" checked> パルデア</label>
   </div>
+  <div class="gen-note">※メルタン→アローラ　ヒスイ→ガラル</div>
 
   <div id="bestContainer">
     この時間の最高記録（1位～3位）：<span id="best">0</span>
@@ -134,33 +132,34 @@ let numbers = [];
 let currentNumber = null;
 let timer = null;
 let timeLeft = 0;
-let limit = 10;
+let limit = 30; // 初期値30秒
 let score = 0;
 
 const answer = document.getElementById("answer");
 const pokemonList = document.getElementById("pokemonList");
 const timeSelect = document.getElementById("timeSelect");
 const bestContainer = document.getElementById("bestContainer");
-const modeRadios = document.getElementsByName("mode");
+const modeSelect = document.getElementById("modeSelect");
 const genCheckboxes = document.querySelectorAll(".gen-container input[type='checkbox']");
 
-// ----- 日本語正規化（ひらがな・濁音・拗音対応） -----
-function normalizeJP(str) {
-  return str.normalize("NFKC").replace(/[\u3041-\u3096]/g, ch => String.fromCharCode(ch.charCodeAt(0)+0x60));
+// 日本語正規化
+function normalizeJP(str){
+  return str.normalize("NFKC").replace(/[\u3041-\u3096]/g, ch=>String.fromCharCode(ch.charCodeAt(0)+0x60));
 }
 
-// ----- 世代範囲 -----
+// 世代範囲
 const genRanges = {
   kanto:[1,151], johto:[152,251], hoenn:[252,386], sinnoh:[387,493],
   unova:[494,649], kalos:[650,721], alola:[722,809], galar:[810,906], paldea:[907,1025]
 };
 
-function getSelectedNumbers() {
+// 選択世代の番号取得
+function getSelectedNumbers(){
   let selected = [];
   let allChecked = true;
   genCheckboxes.forEach(cb=>{
     if(cb.value!=='all' && cb.checked){
-      const [start,end] = genRanges[cb.value]||[1,1025];
+      const [start,end]=genRanges[cb.value]||[1,1025];
       for(let i=start;i<=end;i++) selected.push(i);
     }
     if(cb.value!=='all' && !cb.checked) allChecked=false;
@@ -168,25 +167,19 @@ function getSelectedNumbers() {
   return {nums:selected, allChecked};
 }
 
-// ----- 最高記録キー -----
-function bestKey() {
-  let mode = getMode();
-  return `pokemon_best_${mode}_${limit}`;
+// 最高記録キー
+function bestKey(){
+  return `pokemon_best_${modeSelect.value}_${limit}`;
 }
 
-// ----- モード取得 -----
-function getMode() {
-  for(const r of modeRadios) if(r.checked) return r.value;
-}
-
-// ----- JSON読み込み -----
+// JSON読み込み
 fetch("pokemon.json")
   .then(r=>r.json())
   .then(data=>{pokemon=data; numbers=Object.keys(pokemon).map(Number); updateBest();})
   .catch(()=>alert("pokemon.json の読み込みに失敗しました"));
 
-// ----- 最高記録表示 -----
-function updateBest() {
+// 最高記録表示
+function updateBest(){
   const {allChecked} = getSelectedNumbers();
   if(!allChecked){bestContainer.style.display="none"; return;}
   bestContainer.style.display="block";
@@ -194,22 +187,18 @@ function updateBest() {
   bestContainer.querySelector("#best").textContent = bests.join(" / ");
 }
 
-// ----- チェックボックス処理 -----
+// 世代チェックボックスの制御
 genCheckboxes.forEach(cb=>{
   cb.addEventListener("change",()=>{
     if(cb.value==='all'){
-      genCheckboxes.forEach(c=>c.checked=true);
-    }else{
-      // 全選択のチェック制御
-      const allCB = Array.from(genCheckboxes).find(c=>c.value==='all');
-      const {allChecked} = getSelectedNumbers();
-      allCB.checked = allChecked;
+      // 全てのチェックを外す
+      genCheckboxes.forEach(c=>c.checked=false);
     }
     updateBest();
   });
 });
 
-// ----- ゲーム開始 -----
+// ゲーム開始
 function startGame(){
   score=0;
   limit=Number(timeSelect.value);
@@ -218,13 +207,13 @@ function startGame(){
   nextQuestion();
 }
 
-// ----- 次の問題 -----
+// 次の問題
 function nextQuestion(){
   clearInterval(timer);
-  const {nums, allChecked} = getSelectedNumbers();
-  if(nums.length===0) {alert("世代を選択してください"); return;}
+  const {nums, allChecked}=getSelectedNumbers();
+  if(nums.length===0){ alert("世代を選択してください"); return;}
 
-  if(limit===0){ document.getElementById("timer").textContent="∞"; }
+  if(limit===0) document.getElementById("timer").textContent="∞";
   else{
     timeLeft=limit;
     document.getElementById("timer").textContent=timeLeft;
@@ -235,20 +224,18 @@ function nextQuestion(){
     },1000);
   }
 
-  // 問題番号を選択
   currentNumber=nums[Math.floor(Math.random()*nums.length)];
-  const mode=getMode();
-  if(mode==="numToName") document.getElementById("number").textContent=currentNumber;
+  if(modeSelect.value==="num2poke") document.getElementById("number").textContent=currentNumber;
   else document.getElementById("number").textContent=pokemon[currentNumber];
 
   answer.value="";
   answer.focus();
 }
 
-// ----- Enter判定 -----
-answer.addEventListener("keydown", e=>{ if(e.key==="Enter") checkAnswer(); });
+// Enter判定
+answer.addEventListener("keydown", e=>{if(e.key==="Enter") checkAnswer();});
 
-// ----- 予測変換 -----
+// 予測変換
 answer.addEventListener("input", ()=>{
   const text=normalizeJP(answer.value);
   pokemonList.innerHTML="";
@@ -261,13 +248,12 @@ answer.addEventListener("input", ()=>{
   });
 });
 
-// ----- 判定 -----
+// 判定
 function checkAnswer(){
   clearInterval(timer);
   const input=normalizeJP(answer.value.trim());
-  const mode=getMode();
   let correct;
-  if(mode==="numToName") correct=normalizeJP(pokemon[currentNumber]);
+  if(modeSelect.value==="num2poke") correct=normalizeJP(pokemon[currentNumber]);
   else correct=String(currentNumber);
 
   if(input===correct){
@@ -275,25 +261,23 @@ function checkAnswer(){
     document.getElementById("score").textContent=score;
     nextQuestion();
   }else{
-    gameOver(false, `不正解！\n正解は「${mode==="numToName"?pokemon[currentNumber]:currentNumber}」`);
+    gameOver(false, `不正解！\n正解は「${modeSelect.value==="num2poke"?pokemon[currentNumber]:currentNumber}」`);
   }
 }
 
-// ----- ギブアップ -----
+// ギブアップ
 function giveUp(){
-  const mode=getMode();
-  gameOver(false, `ギブアップ！\n正解は「${mode==="numToName"?pokemon[currentNumber]:currentNumber}」`);
+  gameOver(false, `ギブアップ！\n正解は「${modeSelect.value==="num2poke"?pokemon[currentNumber]:currentNumber}」`);
 }
 
-// ----- ゲームオーバー -----
+// ゲームオーバー
 function gameOver(timeOut=false, reason="時間切れ！"){
   clearInterval(timer);
-  const key=bestKey();
-  let bests=JSON.parse(localStorage.getItem(key)||"[0,0,0]");
+  let bests=JSON.parse(localStorage.getItem(bestKey())||"[0,0,0]");
   if(score>bests[0]){bests=[score,bests[0],bests[1]];}
   else if(score>bests[1]){bests=[bests[0],score,bests[1]];}
   else if(score>bests[2]){bests[2]=score;}
-  localStorage.setItem(key, JSON.stringify(bests));
+  localStorage.setItem(bestKey(), JSON.stringify(bests));
 
   alert(`${reason}\nスコア：${score}\n最高記録：${bests.join(" / ")}`);
   updateBest();
@@ -302,5 +286,3 @@ function gameOver(timeOut=false, reason="時間切れ！"){
 </script>
 </body>
 </html>
-
-
