--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ポケモン図鑑番号検定</title>
-
 <style>
 body {
   font-family: system-ui, sans-serif;
@@ -12,7 +11,6 @@ body {
   padding: 10px;
   background: #f5f5f5;
 }
-
 .container {
   max-width: 500px;
   margin: auto;
@@ -21,19 +19,15 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
-
 h1 { text-align: center; font-size: 1.4em; margin-bottom: 10px; }
-
 select, input, button {
   width: 100%;
   font-size: 1.1em;
   padding: 10px;
   margin: 8px 0;
 }
-
 #status { text-align: center; font-size: 1.1em; margin: 10px 0; }
 #timer { font-weight: bold; color: red; }
-
 .hidden { display: none; }
 
 /* 世代チェックボックス */
@@ -46,22 +40,19 @@ select, input, button {
   padding: 5px;
   border-radius: 5px;
 }
-
 .gen-container label {
   position: relative;
+  padding-left: 5px;
   display: block;
   height: 25px;
   line-height: 25px;
-  padding-left: 5px;
 }
-
 .gen-container input[type="checkbox"] {
   position: absolute;
   bottom: 0;
   right: 0;
   transform: scale(1.2);
 }
-
 .gen-note { font-size: 0.9em; color: #555; margin-bottom: 10px; }
 </style>
 </head>
@@ -187,17 +178,19 @@ function updateBest(){
   bestContainer.querySelector("#best").textContent = bests.join(" / ");
 }
 
-// 世代チェックボックス制御（トグル式全て）
+// 世代チェックボックスの制御（トグル式スマホ対応）
 genCheckboxes.forEach(cb => {
-  cb.addEventListener("change", () => {
-    if(cb.value==='all'){
+  cb.addEventListener("click", () => {
+    const allCB = Array.from(genCheckboxes).find(c => c.value === 'all');
+
+    if(cb.value === 'all'){
+      // 「全て」タップ → オン/オフトグル
       const anyChecked = Array.from(genCheckboxes).some(c => c.value!=='all' && c.checked);
       const newState = !anyChecked;
-      genCheckboxes.forEach(c=>{ if(c.value!=='all') c.checked = newState; });
+      genCheckboxes.forEach(c => { if(c.value!=='all') c.checked = newState; });
       cb.checked = newState;
     } else {
-      // 個別が変わった場合は全てのチェック状態を確認して「全て」ボックスを同期
-      const allCB = Array.from(genCheckboxes).find(c=>c.value==='all');
+      // 個別チェック → 「全て」反映
       const {allChecked} = getSelectedNumbers();
       allCB.checked = allChecked;
     }
@@ -217,7 +210,7 @@ function startGame(){
 // 次の問題
 function nextQuestion(){
   clearInterval(timer);
-  const {nums, allChecked}=getSelectedNumbers();
+  const {nums}=getSelectedNumbers();
   if(nums.length===0){ alert("世代を選択してください"); return;}
 
   if(limit===0) document.getElementById("timer").textContent="∞";
