--- a/index.html
+++ b/index.html
@@ -201,17 +201,19 @@ function gameOver(timeOut=false, reason="時間切れ！"){
   if(timeOut) reason=`時間切れ！\n正解は「${answerText}」`;
   else if(reason.indexOf("正解")===-1) reason+=`\n正解は「${answerText}」`;
 
-  // 最高記録更新（全世代選択時のみ）
-  const {allChecked} = getSelectedNumbers();
-  if(allChecked){
+  const {allChecked}=getSelectedNumbers();
+
+  let alertText=`${reason}\nスコア：${score}`;
+  if(allChecked){ // 全世代選択時のみ最高記録を追加
     let bests=JSON.parse(localStorage.getItem(bestKey())||"[0,0,0]");
     if(score>bests[0]){bests=[score,bests[0],bests[1]];}
     else if(score>bests[1]){bests=[bests[0],score,bests[1]];}
     else if(score>bests[2]){bests[2]=score;}
     localStorage.setItem(bestKey(), JSON.stringify(bests));
+    alertText+=`\n最高記録：${bests.join(" / ")}`;
   }
 
-  alert(`${reason}\nスコア：${score}`);
+  alert(alertText);
   updateBest();
   document.getElementById("game").classList.add("hidden");
 }
